# notionai-pet

./: Intro.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Pet.tsx  SpeechBubble.tsx
src/lib/: notion.ts  notionWatcher.ts
src/stores/: authStore.ts  characterStore.ts  petStore.ts
src/windows/: MainWindow.tsx  PetWindow.tsx
