[package]
name = "notionai-pet"
version = "0.4.0"
description = "NotionAI desktop pet with real-time speech bubbles"
authors = ["FilbertLab"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notionai_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-autostart = "2"
# windows-native: Windows Credential Manager / apple-native: macOS Keychain
keyring = { version = "3", features = ["windows-native", "apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 릴리스 바이너리 최적화 (크기/속도)
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

